[package]
name = "gogc"
version = "0.1.0"
authors = ["dtynn <dtynn@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cbindgen = "= 0.10.0"
